the cross and menu icons are edited

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "get-google-fonts": "^1.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons-kit": "^2.0.0"
+    "react-icons": "^5.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
